// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article found 1`] = `
Object {
  "data": Object {
    "searchedText": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "message": Object {
      "id": "6270464463537",
      "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"計程車上有裝悠遊卡感⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "contents": Array [
                    Object {
                      "color": "#ffb600",
                      "text": "計程車上有裝悠遊卡感應器",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我們的福利，與大家分享，可以善加利用！=7折，朋友使用ok",
                      "type": "span",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYWx\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “計程車上有裝悠遊卡感應器，老人悠悠卡可以享受...”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😀",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 52% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 5,
                  "text": "None of these messages matches mine :(",
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"__NO_ARTICLE_FOUND__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "None of these messages matches mine :(",
                    "label": "Tell us more",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#AAAAAA",
                  "margin": "none",
                  "size": "sm",
                  "text": "😶",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`articles found with high similarity 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"YouTube · ⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "contents": Array [
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "  ·  ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYWx\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “YouTube  ·  寻找健康人生”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "contents": Array [
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYWy\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “YouTube
·
寻找健康人生”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`input matches dialogflow intent search article when input length > 10 and intentDetectionConfidence != 1 1`] = `
Object {
  "data": Object {
    "searchedText": "零一二三四五六七八九十",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "零一二三四五六七八九十",
    "message": Object {
      "id": "6270464463537",
      "text": "零一二三四五六七八九十",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "It's good that you don't trust that message just yet. 👍

                  However, I currently don't recognize \\"零一二三四五六七八九十\\". May I have your help?",
      "type": "text",
    },
    Object {
      "altText": "🥇 Be the first to report the message",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "contents": Array [
                Object {
                  "text": "Currently we don't have this message in our database. If you think it is probably a rumor, ",
                  "type": "span",
                },
                Object {
                  "color": "#ffb600",
                  "text": "press “🆕 Submit to database” to make this message public on Cofacts database ",
                  "type": "span",
                  "weight": "bold",
                },
                Object {
                  "text": "for nice volunteers to fact-check. Although you won't receive answers rightaway, you can help the people who receive the same message in the future.",
                  "type": "span",
                },
              ],
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "paddingAll": "lg",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "🆕 Submit to database",
                "type": "uri",
                "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=source&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE0OTc5OTQwMTc0NDcsInN1YiI6IlVjNzZkOGFlOWNjZDFhZGE0ZjA2YzRlMTUxNWQ0NjQ2NiIsImV4cCI6MTU3NzkyMzIwMH0.V4OTSDA0wDDrlc665JRyjkC0Ux3RFqUM-RN_VNKNCcs&article_submission=true",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "header": Object {
          "contents": Array [
            Object {
              "flex": 0,
              "gravity": "center",
              "text": "🥇",
              "type": "text",
            },
            Object {
              "color": "#ffb600",
              "text": "Be the first to report the message",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
          ],
          "layout": "horizontal",
          "paddingAll": "lg",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`input matches dialogflow intent uses dialogflow response when input length < 10 1`] = `
Object {
  "data": Object {
    "searchedText": "你好",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "你好",
    "message": Object {
      "id": "6270464463537",
      "text": "你好",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "歡迎光臨",
      "type": "text",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`input matches dialogflow intent uses dialogflow response when input length > 10 and intentDetectionConfidence = 1 1`] = `
Object {
  "data": Object {
    "searchedText": "零一二三四五六七八九十",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "零一二三四五六七八九十",
    "message": Object {
      "id": "6270464463537",
      "text": "零一二三四五六七八九十",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "歡迎光臨",
      "type": "text",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`only one article found with high similarity 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "AVvY-yizyCdS-nWhuYWx",
    "type": "postback",
  },
  "isSkipUser": true,
  "replies": undefined,
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle image not found 1`] = `
Object {
  "data": Object {
    "searchedText": "OCR text OCR text OCR text",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "OCR text OCR text OCR text",
    "message": Object {
      "type": "image",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "We didn't find anything about this image :(",
      "type": "text",
    },
    Object {
      "altText": "We suggest forwarding the message to the following fact-checkers instead. They have 💁 1-on-1 Q&A service to respond to your questions.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "We suggest forwarding the message to the following fact-checkers instead. They have 💁 1-on-1 Q&A service to respond to your questions.",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "MyGoPen 真人查證",
                "type": "uri",
                "uri": "https://line.me/R/ti/p/%40imygopen",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle message matches only hyperlinks 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"YouTube · ⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "color": "#ff7b7b",
                  "size": "sm",
                  "text": "(Words found in the hyperlink)",
                  "type": "text",
                  "weight": "bold",
                },
                Object {
                  "contents": Array [
                    Object {
                      "text": "summary1 summary1 summary1 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
summary2 summary2 summary2 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYGB\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “https://www.youtube.co...”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😐",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 12% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "color": "#ff7b7b",
                  "size": "sm",
                  "text": "(Words found in the hyperlink)",
                  "type": "text",
                  "weight": "bold",
                },
                Object {
                  "contents": Array [
                    Object {
                      "text": "title1 title1 title1 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
title2 title2 title2 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYGA\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “http://www.chinatimes....”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😐",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 0% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 5,
                  "text": "None of these messages matches mine :(",
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"__NO_ARTICLE_FOUND__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "None of these messages matches mine :(",
                    "label": "Tell us more",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#AAAAAA",
                  "margin": "none",
                  "size": "sm",
                  "text": "😶",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle text not found 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "text": "It's good that you don't trust that message just yet. 👍

                  However, I currently don't recognize \\"YouTube · ⋯⋯\\". May I have your help?",
      "type": "text",
    },
    Object {
      "altText": "🥇 Be the first to report the message",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "contents": Array [
                Object {
                  "text": "Currently we don't have this message in our database. If you think it is probably a rumor, ",
                  "type": "span",
                },
                Object {
                  "color": "#ffb600",
                  "text": "press “🆕 Submit to database” to make this message public on Cofacts database ",
                  "type": "span",
                  "weight": "bold",
                },
                Object {
                  "text": "for nice volunteers to fact-check. Although you won't receive answers rightaway, you can help the people who receive the same message in the future.",
                  "type": "span",
                },
              ],
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "paddingAll": "lg",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "🆕 Submit to database",
                "type": "uri",
                "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=source&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE0OTc5OTQwMTc0NDcsInN1YiI6IlVjNzZkOGFlOWNjZDFhZGE0ZjA2YzRlMTUxNWQ0NjQ2NiIsImV4cCI6MTU3NzkyMzIwMH0.V4OTSDA0wDDrlc665JRyjkC0Ux3RFqUM-RN_VNKNCcs&article_submission=true",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "header": Object {
          "contents": Array [
            Object {
              "flex": 0,
              "gravity": "center",
              "text": "🥇",
              "type": "text",
            },
            Object {
              "color": "#ffb600",
              "text": "Be the first to report the message",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
          ],
          "layout": "horizontal",
          "paddingAll": "lg",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
